<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/backToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_backspace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/backToLogin" />

    <TextView
        android:id="@+id/createProfileTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="8dp"
        android:gravity="start"
        android:text="@string/create_profile"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inputBelow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/inputBelow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="start"
        android:text="@string/fill_input"
        app:layout_constraintBottom_toTopOf="@+id/enterFullNameLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createProfileTextView" />

    <LinearLayout
        android:id="@+id/enterFullNameLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:orientation="horizontal"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/enterEmailLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputBelow">

        <ImageView
            android:id="@+id/personImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/outline_person_outline_24"
            android:contentDescription="@string/full_name_content_desc"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>

        <EditText
            android:id="@+id/enterFullName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:gravity="start"
            android:autofillHints="name"
            android:hint="@string/full_name_hint"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/enterEmailLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:orientation="horizontal"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/enterPasswordLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterFullNameLinear">

        <ImageView
            android:id="@+id/emailImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_email"
            android:contentDescription="@string/email_content_desc"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>

        <EditText
            android:id="@+id/enterEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:gravity="start"
            android:autofillHints="emailAddress"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/enterPasswordLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/enterConfirmPasswordLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEmailLinear">

        <ImageView
            android:id="@+id/passwordImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_password"
            android:contentDescription="@string/password_content_desc"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <EditText
            android:id="@+id/enterPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="start"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:hint="@string/password_hint"
            android:background="@null"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/enterConfirmPasswordLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPasswordLinear">

        <ImageView
            android:id="@+id/passwordConfirmImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_password"
            android:contentDescription="@string/confirm_password_content_desc"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />

        <EditText
            android:id="@+id/enterConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:gravity="start"
            android:autofillHints="password"
            android:hint="@string/confirm_password_hint"
            android:background="@null"/>

    </LinearLayout>

    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:background="@drawable/edit_corner_login_button"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@id/haveAccountLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPasswordLinear" />

    <LinearLayout
        android:id="@+id/haveAccountLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/haveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/have_not_account" />

        <TextView
            android:id="@+id/signInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:textColor="@color/for_round"
            android:text="@string/sign_in" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>