<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TextView
        android:id="@+id/testAvatar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/material_dynamic_neutral0"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="M" />

    <TextView
        android:id="@+id/profileInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        tools:text="Mukhammad Khasbulatov"
        android:layout_margin="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/testAvatar" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profitMaterialCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/for_card"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileInfo">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="8dp"
                android:paddingBottom="16dp"
                android:text="@string/profit"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/userProfit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:background="@null"
                android:hint="@string/user_profit"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textCursorDrawable="@drawable/cursor_drawable"
                android:textSize="30sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/amountSubscriptionsCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/for_card"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toTopOf="@+id/percentageOfProfit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profitMaterialCardView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="8dp"
                android:paddingBottom="16dp"
                android:text="@string/amount"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/amountSubscriptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/preAmount"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textCursorDrawable="@drawable/cursor_drawable"
                android:textSize="30sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/percentageOfProfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/for_card"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amountSubscriptionsCardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/spendOnSubscriptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/spend_on_subscriptions"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/subscriptionPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                app:indicatorColor="@color/for_round"
                app:indicatorSize="150dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spendOnSubscriptions"
                app:trackColor="#454c5f"
                app:trackCornerRadius="6dp"
                app:trackThickness="12dp" />

            <TextView
                android:id="@+id/percentageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="20dp"
                android:text="@string/preAmount"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="@id/subscriptionPercentage"
                app:layout_constraintEnd_toEndOf="@id/subscriptionPercentage"
                app:layout_constraintStart_toStartOf="@id/subscriptionPercentage"
                app:layout_constraintTop_toTopOf="@id/subscriptionPercentage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="40dp"
                android:text="@string/ofIncome"
                app:layout_constraintBottom_toBottomOf="@id/subscriptionPercentage"
                app:layout_constraintEnd_toEndOf="@id/subscriptionPercentage"
                app:layout_constraintStart_toStartOf="@id/subscriptionPercentage"
                app:layout_constraintTop_toTopOf="@id/subscriptionPercentage" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>